<resources>
    <string name="app_name">Scan And Buy</string>
    <string name="login_page">Sign in or Login for smart shopping</string>
    <string name="google_signin">Continue with Google</string>
    <string name="login_button">Continue with Email</string>
    <string name="signin_page">Login with your email address</string>
    <string name="signin_button">Login</string>
    <string name="sigin_page1">DO NOT HAVE AN ACCOUNT?</string>
    <string name="signup"><b><u>SIGNUP</u></b></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="signup_page">Sign up for smart shopping</string>
    <string name="name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_meetup">Create Meetup</string>
    <string name="signout">Logout</string>
    <string name="title">Title</string>
    <string name="descripton">Description (opional)</string>
    <string name="location">Location</string>
    <string name="speaker_name">Host Name</string>
    <string name="speaker_occupation">Occupation</string>
    <string name="main2_activity">Who Are You?</string>
    <string name="audience">Audience</string>
    <string name="speaker">Speaker</string>
    <string name="your_code">Your Code</string>
    <string name="new_meetup">activity_newmeetup</string>

    <string name="meetup_title">meetup_title</string>
    <string name="meetup_id">meetup_id</string>
    <string name="creator_id">creator_id</string>
    <string name="key">key</string>
    <string name="key_error">Key is not valid</string>
    <string name="date">date</string>
    <string name="time_from">time_from</string>
    <string name="time_till">time_till</string>
    <string name="meetup_question">meetup_question</string>
    <string name="user_likes">user_likes</string>
    <string name="question_box">What Is Your Question?</string>
    <string name="intent_meetuproom">intent_meetuproom</string>
    <string name="meetuproom_createdsuccessfuly">Your Meetup Room Is Created Successfully</string>
    <string name="meetuproom_createdkey">Here is the <b>key</b> to join your meetup</string>
    <string name="nomeetups_text">No meetups at the moment</string>
    <string name="nomeetups_create">Create your own meetup</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="barcode_id">Barcode Id</string>
    <string name="scan">Scan</string>
    <string name="product_details">Product Details</string>
    <string name="add_product_1">ADD PRODUCT</string>
    <string name="product_price_inr">Product Price (INR)</string>
    <string name="set_product_image">Set Product Image</string>
    <string name="add_to_the_cart">Add To The Cart</string>
    <string name="cancel">Cancel</string>
    <string name="price_u20b9">Price : ₹</string>
    <string name="model_id">Model Id :</string>
    <string name="details">Details :</string>
    <string name="price_details">Price Details</string>
    <string name="u20b9">₹</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="my_cart">My Cart</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="remove">Remove</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="legal_and_about">Legal and About</string>
    <string name="customer_service">Customer Service</string>
    <string name="share_this_app">Share this App</string>
    <string name="logout">Logout</string>
    <string name="my_bills">My Bills</string>
    <string name="bill_amount">Bill Amount</string>
</resources>
