<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F5F5"
    tools:context=".Signup_activity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPagersignup"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewPagersignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#FF757575"
        android:fontFamily="casual"
        android:text="@string/signup_page" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/linearLayout3">
        <ImageView
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:src="@drawable/twotone_person_black_48"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_name_signup"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputnamesignup"
                android:hint="@string/name"
                android:fontFamily="casual"
                android:textSize="17sp"
                android:focusableInTouchMode="true"
                android:inputType="textPersonName"
                android:textColor="#474747"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/linearLayout4">
        <ImageView
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:src="@drawable/twotone_email_black_48"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_email_signup"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:id="@+id/inputemailsignup"
                android:hint="@string/email"
                android:focusableInTouchMode="true"
                android:textSize="17sp"
                android:inputType="textEmailAddress"
                android:textColor="#474747"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/linearLayout5">
        <ImageView
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:src="@drawable/twotone_lock_black_48"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_password_signup"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputpasswordsignup"
                android:hint="@string/password"
                android:textSize="17sp"
                android:fontFamily="casual"
                android:focusableInTouchMode="true"
                android:inputType="textPassword"
                android:textColor="#474747"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/linearLayout6">
        <ImageView
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:src="@drawable/twotone_lock_black_48"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_confirmpassword_signup"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputconfirmpasswordsignup"
                android:hint="@string/confirm_password"
                android:textSize="17sp"
                android:fontFamily="casual"
                android:focusableInTouchMode="true"
                android:inputType="textPassword"
                android:textColor="#474747"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_Button"
        android:layout_marginLeft="35dp"
        android:layout_below="@+id/linearLayout6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/signin_buttonshape"
        android:text="@string/signup"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:fontFamily="casual"
        android:textSize="20sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/signup_progressbar"
            android:clickable="true"
            android:visibility="invisible"/>
    </RelativeLayout>

</RelativeLayout>