<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/profile_image"
        android:background="@null"
        tools:ignore="ContentDescription"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile_image"
        android:layout_marginTop="10dp"
        android:id="@+id/change_photo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFEF5350"
        android:text="@string/add_product_image"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"
        android:weightSum="6"
        android:id="@+id/details_layout"
        android:layout_below="@id/change_photo"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/fullname"
                android:alpha="0.6"
                android:layout_marginStart="3dp"
                android:text="@string/product_name"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                tools:ignore="NestedWeights"
                android:layout_marginLeft="3dp" />
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="bottom"
                android:paddingBottom="15dp"
                android:inputType="textPersonName"
                android:id="@+id/input_product_name"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/mobilenumber"
                    android:alpha="0.6"
                    android:layout_alignParentTop="true"
                    android:text="@string/barcode_id"
                    tools:ignore="NestedWeights" />
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_barcode_id"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/mobilenumber"
                    android:textStyle="bold"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginRight="65dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/mobilenumber"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/scan_product"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    android:textColor="#FFEF5350"
                    android:text="@string/scan"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/organisation"
                android:alpha="0.6"
                android:paddingBottom="10dp"
                android:text="RFID Tag"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_rfid"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/emailid"
                android:alpha="0.6"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:text="@string/product_price_inr"
                tools:ignore="NestedWeights" />
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_product_price"
                android:paddingBottom="15dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/address"
                android:alpha="0.6"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:text="@string/product_details"
                tools:ignore="NestedWeights" />
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_product_details"
                android:paddingBottom="18dp"
                android:layout_weight="1"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upload_product"
        android:layout_below="@+id/details_layout"
        android:layout_marginTop="25dp"
        android:layout_marginStart="18dp"
        android:textSize="21sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:paddingBottom="45dp"
        android:textColor="#FFEF5350"
        android:text="@string/add_product_1"/>
</RelativeLayout>