<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F5F5">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/main_color"
        android:padding="22dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/mycarts_back"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/my_cart"
                android:id="@+id/mycart"
                android:textColor="@color/white"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/mycart"
                android:layout_centerVertical="true"
                android:text=""
                android:id="@+id/cart_items"
                android:textColor="@color/white"
                android:textSize="22sp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scan_product_scroll"
        android:layout_marginBottom="50dp"
        android:layout_below="@id/toolbar"
        >
        <include layout="@layout/cart_layout" />
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="50dp"
        android:elevation="10dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/u20b9"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/total_bill_amount"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/mid1"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="5dp"
            android:layout_centerHorizontal="true"
            android:text="11,999"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            />
        <TextView
            android:layout_width="1dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/mid1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/proceed_checkout"
            android:layout_toEndOf="@id/mid1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/signin_buttonshape"
            android:text="@string/proceed_to_checkout"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:alpha="0.5"
            android:layout_marginBottom="5dp"
            android:fontFamily="casual"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            />
    </RelativeLayout>
</RelativeLayout>